// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`literal expression Example 0 1`] = `
Object {
  "data": Object {
    "id": "0",
    "literal": Object {
      "data": Object {
        "id": "0",
        "value": "hello",
      },
      "type": "string",
    },
  },
  "type": "literalExpression",
}
`;

exports[`literal expression Example 1 1`] = `
Object {
  "data": Object {
    "id": "0",
    "literal": Object {
      "data": Object {
        "id": "0",
        "value": 42,
      },
      "type": "number",
    },
  },
  "type": "literalExpression",
}
`;
